# rusty-counter

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README
.github/workflows/: ci.yml
src/: lib.rs  main.rs  routes.rs  storage.rs
tests/: counter_test.rs
